Bug 1114011 - for autocomplete with for minresultsforpopup > 1: entering match doesn't work properly. r=mak